# snowball-lite

./: .dockerignore  .envrc.example  .gitignore  .python-version  AGENTS.md  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  docker-compose.server.yml  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  web
.github/: release-please-config.json
.github/workflows/: auto-merge-release-pr.yml  frontend-image.yml  release.yml
apps/backend/: README.md  sitecustomize.py  (+1 more)
docs/: README.md
extends/: Bucket.py  DynamicBalance.py  EvaluateObject.py  ExtEvaluate.py  ExtTrade.py  Strategy.py  ValuationScheduled.py  bond_yield.py  fundspool.py  positions.py
migrations_snowball_test/: env.py
py_script/: backtest_script.py  bond_fun.py  bond_yield_script.py  data_process.py  indexinfo.py  mysql_to_sqlite_lite_migration.py  sina_fund.py
scripts/: bootstrap-worktree.sh  deploy-lite-docker.sh  run-lite-backend.sh
tests/: conftest.py  test_lite_bootstrap_review.py  test_lite_databox_stage4_coverage.py  test_lite_real_databox_validation.py  test_lite_runtime_dependency_boundary.py  test_lite_smoke_validation_and_decision.py  test_lite_sqlite_high_risk_models.py  test_lite_sqlite_minimal_path.py  test_lite_stage4_query_api_matrix.py  test_lite_stage5_schema_expansion.py  test_monorepo_transition_task01.py  test_monorepo_transition_task03.py  test_monorepo_transition_task04.py  test_monorepo_transition_task05.py  test_remove_root_web_compat_entry_task01.py  test_xalpha_databox_compat.py
web/: __init__.py  gunicorn.config.py  lite_bootstrap.py  settings.py
xalpha/: __init__.py  info.py  sqlio.py  universal.py
(+861 files in other folders)
