[project]
name = "snowball-lite"
version = "0.1.0"
description = "Snowball Lite - A lightweight financial data analysis backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
dependencies = [
    "lxml",
    "xlrd>=1.0.0",
    "beautifulsoup4>=4.9.0",
    "pandas<2.0",
    "numpy<2.0",
    "scipy",
    "marshmallow~=3.13.0",
    "flask~=2.2.3",
    "sqlalchemy~=1.4.13",
    "requests==2.31.0",
    "akshare==1.17.17",
    "simplejson~=3.17.2",
    "pyecharts==2.0.8",
    "python-dateutil~=2.8.1",
    "setuptools~=65.6.3",
    "apscheduler~=3.11.0",
    "flask-apscheduler~=1.13.1",
    "flask-sqlalchemy~=3.0.3",
    "flask-restful~=0.3.9",
    "flask-marshmallow~=0.14.0",
    "flask-cors~=3.0.10",
    "flask-docs~=0.7.1",
    "Flask-Migrate==4.0.7",
    "pymysql~=1.0.2",
    "openpyxl~=3.1.1",
    "marshmallow-sqlalchemy~=0.28.2",
    "dramatiq~=1.14.2",
    "flask-dramatiq~=0.6.0",
    "flask-profiler~=1.8.1",
    "flask-restx==1.3.0",
    "Babel~=2.12.1",
    "xlsxwriter==3.1.6",
    "redis==4.5.5",
    "redis[hiredis]",
    "sqlparse==0.5.3",
    "Jinja2==3.1.6",
    "python-telegram-bot==21.5",
    "werkzeug~=2.2.3",
    "gunicorn==20.1.0",
    "gevent==23.9.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-flask==1.3.0",
    "pytest-mock==3.12.0",
    "pytest-asyncio==0.23.7",
    "pytest-xdist==3.6.1",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["web*", "xalpha*"]
